# fastapi-graphql

./: .gitignore  pyproject.toml
migrations/: env.py
migrations/versions/: 032a4a0205a1_create_email_table.py  df5455e463fd_refactor_email_table_to_qna.py
src/: main.py
src/api/: __init__.py
src/api/graphql/: __init__.py
src/api/rest/: __init__.py  qna.py
src/core/: config.py
src/crud/: __init__.py  qna.py
src/database/: base.py  session.py
src/model/: __init__.py  email.py  qna.py
src/schema/: __init__.py
src/schema/email/: __init__.py  crud.py
src/schema/qna/: __init__.py  crud.py
src/test/: conftest.py  test_qna.py
