[tool.poetry]
name = "fastapi-graphql"
version = "0"
description = "FastAPI with GraphQL Practice"
authors = ["weekwith.me <leedobby@weekwith.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
strawberry-graphql = {extras = ["fastapi"], version = "^0.85.1"}
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
