[tool.poetry]
name = "fastapi-graphql"
version = "0"
description = "FastAPI with GraphQL Practice"
authors = ["weekwith.me <leedobby@weekwith.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
strawberry-graphql = {extras = ["fastapi"], version = "^0.85.1"}
uvicorn = {extras = ["standard"], version = "^0.15.0"}
SQLAlchemy = "^1.4.26"
alembic = "^1.7.4"
python-dotenv = "^0.19.1"
asyncpg = "^0.24.0"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
httpx = "^0.20.0"
pytest-asyncio = "^0.16.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
